modules/Network/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my_vpc.id
  tags = {
    Name = "${var.prefix}-IGW"
  }
}
